# gis-portfolio

./: .dockerignore  .editorconfig  .env.example  .gitignore  Directory.Build.props  Directory.Packages.props  Dockerfile  LICENSE  Portfolio.sln  README.md  coverlet.runsettings
.claude/: launch.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Portfolio.Benchmarks/: DeterministicPropertyRepository.cs  Diagnostics.cs  Portfolio.Benchmarks.csproj  Program.cs  Workloads.cs
Portfolio.Common/: Portfolio.Common.csproj
Portfolio.Common/ArcGis/: ArcGisGeocodeCandidate.cs  ArcGisGeocodeResponse.cs  ArcGisLocation.cs  ArcGisReverseAddress.cs  ArcGisReverseGeocodeResponse.cs
Portfolio.Common/Configuration/: BatchGeocodingOptions.cs  GoogleAuthSettings.cs  ReverseGeocodingOptions.cs
Portfolio.Common/Constants/: ProfileClaimTypes.cs
Portfolio.Common/DTOs/: AddressParseRequestDto.cs  AddressParsedDto.cs  AddressValidationResultDto.cs  BatchGeocodingResultDto.cs  BatchJobAcceptedDto.cs  CatRiskDtos.cs  ChangeDetectionDtos.cs  ClaimCreateDto.cs  ClaimDto.cs  CollectionDto.cs  CreateSavedFeatureDto.cs  CreateSavedSearchDto.cs  FeatureDto.cs  FiberClientDto.cs  FiberDashboardDto.cs  FiberMaterialDto.cs  FiberOrderDto.cs  FiberShipmentDto.cs  FleetRoutingDtos.cs  GeoStreamDtos.cs  GisFeatureDto.cs  GoogleProfileDto.cs  HomeSearchPreferencesDto.cs  OutageDtos.cs  ProfileDto.cs  RasterTerrainDtos.cs  ResponseCoverageDtos.cs  ReverseGeocodingResultDto.cs  SaveSearchRequest.cs  SavedFeatureCreateDto.cs  SavedFeatureDto.cs  SavedSearchDto.cs  ScoredPropertyDto.cs  SpatialClusterDtos.cs  SpatialGeometryDtos.cs  SpatialNetworkDtos.cs  SpatialOverlayDtos.cs  UpdateProfileDto.cs  UserNoteDto.cs  ViewshedDtos.cs
Portfolio.Common/Enums/: ConfidenceTier.cs
Portfolio.Common/Models/: BatchJob.cs  Collection.cs  FiberClient.cs  FiberInventoryTransaction.cs  FiberMaterial.cs  FiberOrder.cs  FiberShipment.cs  GisFeature.cs  GoogleAuthSettings.cs  Property.cs  SavedFeature.cs  SavedSearch.cs  UserClaim.cs  UserNote.cs  UserProfile.cs
Portfolio.Common/Serialization/: PortfolioJsonOptions.cs
Portfolio.Repositories/: DesignTimeDbContextFactory.cs  GisDbContext.cs  Portfolio.Repositories.csproj  PortfolioDbContext.cs
Portfolio.Repositories/Interfaces/: ICollectionRepository.cs  IFiberClientRepository.cs  IFiberInventoryTransactionRepository.cs  IFiberMaterialRepository.cs  IFiberOrderRepository.cs  IFiberShipmentRepository.cs  IGisFeatureRepository.cs  IPropertyRepository.cs  ISavedFeatureRepository.cs  ISavedSearchRepository.cs  IUserNoteRepository.cs  IUserProfileRepository.cs
Portfolio.Repositories/Mappings/: CollectionMap.cs  FiberClientMapping.cs  FiberInventoryTransactionMapping.cs  FiberMaterialMapping.cs  FiberOrderMapping.cs  FiberShipmentMapping.cs  PropertyMap.cs  SavedFeatureMap.cs  SavedSearchMap.cs  UserClaimMap.cs  UserNoteMap.cs  UserProfileMap.cs
Portfolio.Repositories/Migrations/: 20260224025857_GisFeature.Designer.cs  20260224025857_GisFeature.cs  20260224042017_GISFeatureUpdates.Designer.cs  20260224042017_GISFeatureUpdates.cs  20260225153407_GisPortfolio.Designer.cs  20260225153407_GisPortfolio.cs  20260225182029_CollectionFeature.Designer.cs  20260225182029_CollectionFeature.cs  20260226030950_UserProfileIntegration.Designer.cs  20260226030950_UserProfileIntegration.cs  20260228034839_RemoveNotes.Designer.cs  20260228034839_RemoveNotes.cs  20260306171132_RemoveUserNotes.Designer.cs  20260306171132_RemoveUserNotes.cs  20260306175937_AlignCollectionOwnerIdToGuid.Designer.cs  20260306175937_AlignCollectionOwnerIdToGuid.cs  20260306214530_InitialPostgres.Designer.cs  20260306214530_InitialPostgres.cs  20260306232837_InitialPostgres.Designer.cs  20260307174608_HomeSearch.Designer.cs  (+31 more)
Portfolio.Services/: AssemblyInfo.cs  InMemoryBatchJobStore.cs  Portfolio.Services.csproj  RedisBatchJobStore.cs
Portfolio.Services.Tests/: Portfolio.Services.Tests.csproj  SavedFeatureServiceTests.cs
Portfolio.Tests/: Portfolio.Tests.csproj  UnitTest1.cs
Portfolio.Web/: AssemblyInfo.cs  Portfolio.Web.csproj  Program.cs  appsettings.Production.json  appsettings.json
docker/: Dockerfile  docker-compose.override.yml  docker-compose.yml
docs/: render-deployment.md  resume-update.md
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  redis.yaml  secret.yaml  service.yaml
native/: README.md
native/cat_risk_kernel/: CMakeLists.txt
native/cat_risk_kernel/include/: cat_risk_kernel.h
native/cat_risk_kernel/src/: cat_risk_kernel.cpp
native/change_detection_kernel/: CMakeLists.txt
native/change_detection_kernel/include/: change_detection_kernel.h
native/change_detection_kernel/src/: change_detection_kernel.cpp
native/facility_location_kernel/: CMakeLists.txt
native/facility_location_kernel/include/: facility_location_kernel.h
native/facility_location_kernel/src/: facility_location_kernel.cpp
native/portfolio_scoring/: CMakeLists.txt
native/portfolio_scoring/include/: portfolio_scoring.h
native/portfolio_scoring/src/: scoring_kernel.cpp
native/raster_terrain_kernel/: CMakeLists.txt
native/raster_terrain_kernel/include/: raster_terrain_kernel.h
native/raster_terrain_kernel/src/: raster_terrain_kernel.cpp
native/spatial_cluster_kernel/: CMakeLists.txt
native/spatial_cluster_kernel/include/: spatial_cluster_kernel.h
native/spatial_cluster_kernel/src/: spatial_cluster_kernel.cpp
native/spatial_geometry_kernel/: CMakeLists.txt
native/spatial_geometry_kernel/include/: spatial_geometry_kernel.h
native/spatial_geometry_kernel/src/: spatial_geometry_kernel.cpp
native/spatial_overlay_kernel/: CMakeLists.txt
native/spatial_overlay_kernel/include/: spatial_overlay_kernel.h
native/spatial_overlay_kernel/src/: spatial_overlay_kernel.cpp
native/viewshed_kernel/: CMakeLists.txt
native/viewshed_kernel/include/: viewshed_kernel.h
native/viewshed_kernel/src/: viewshed_kernel.cpp
native/vrp_solver_kernel/: CMakeLists.txt
native/vrp_solver_kernel/include/: vrp_solver_kernel.h
native/vrp_solver_kernel/src/: vrp_solver_kernel.cpp
(+398 files in other folders)
